@@ -51,7 +51,7 @@ Same as \fIobjPtr\fR except description of bitmap is passed as a string and
 resulting Pixmap is not cached.
 .AP "const char" *name in
 Name for new bitmap to be defined.
-.AP "const char" *source in
+.AP "const void" *source in
 Data for bitmap, in standard bitmap format.
 Must be stored in static memory whose value will never change.
 .AP "int" width in
