@@ -107,7 +107,7 @@ TkpDefineNativeBitmaps(void)
 
 	    nativeIconPtr->id = builtInPtr->id;
 	    nativeIconPtr->type = builtInPtr->type;
-	    predefPtr->source = (char *) nativeIconPtr;
+	    predefPtr->source = nativeIconPtr;
 	    predefPtr->width = builtInPtr->size;
 	    predefPtr->height = builtInPtr->size;
 	    predefPtr->native = 1;
@@ -137,7 +137,7 @@ TkpDefineNativeBitmaps(void)
 Pixmap
 TkpCreateNativeBitmap(
     Display *display,
-    const char *source)		/* Info about the icon to build. */
+    const void *source)		/* Info about the icon to build. */
 {
     Pixmap pix;
     Rect destRect;
